; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/uniphier/extr_aio-cpu.c_uniphier_aio_startup.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/uniphier/extr_aio-cpu.c_uniphier_aio_startup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { i64 }
%struct.snd_soc_dai = type { i32 }
%struct.uniphier_aio = type { %struct.uniphier_aio_sub* }
%struct.uniphier_aio_sub = type { i32, i64, %struct.snd_pcm_substream* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*, %struct.snd_soc_dai*)* @uniphier_aio_startup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uniphier_aio_startup(%struct.snd_pcm_substream* %0, %struct.snd_soc_dai* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_pcm_substream*, align 8
  %5 = alloca %struct.snd_soc_dai*, align 8
  %6 = alloca %struct.uniphier_aio*, align 8
  %7 = alloca %struct.uniphier_aio_sub*, align 8
  %8 = alloca i32, align 4
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %4, align 8
  store %struct.snd_soc_dai* %1, %struct.snd_soc_dai** %5, align 8
  %9 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %5, align 8
  %10 = call %struct.uniphier_aio* @uniphier_priv(%struct.snd_soc_dai* %9)
  store %struct.uniphier_aio* %10, %struct.uniphier_aio** %6, align 8
  %11 = load %struct.uniphier_aio*, %struct.uniphier_aio** %6, align 8
  %12 = getelementptr inbounds %struct.uniphier_aio, %struct.uniphier_aio* %11, i32 0, i32 0
  %13 = load %struct.uniphier_aio_sub*, %struct.uniphier_aio_sub** %12, align 8
  %14 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %4, align 8
  %15 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = getelementptr inbounds %struct.uniphier_aio_sub, %struct.uniphier_aio_sub* %13, i64 %16
  store %struct.uniphier_aio_sub* %17, %struct.uniphier_aio_sub** %7, align 8
  %18 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %4, align 8
  %19 = load %struct.uniphier_aio_sub*, %struct.uniphier_aio_sub** %7, align 8
  %20 = getelementptr inbounds %struct.uniphier_aio_sub, %struct.uniphier_aio_sub* %19, i32 0, i32 2
  store %struct.snd_pcm_substream* %18, %struct.snd_pcm_substream** %20, align 8
  %21 = load %struct.uniphier_aio_sub*, %struct.uniphier_aio_sub** %7, align 8
  %22 = getelementptr inbounds %struct.uniphier_aio_sub, %struct.uniphier_aio_sub* %21, i32 0, i32 1
  store i64 0, i64* %22, align 8
  %23 = load %struct.uniphier_aio_sub*, %struct.uniphier_aio_sub** %7, align 8
  %24 = getelementptr inbounds %struct.uniphier_aio_sub, %struct.uniphier_aio_sub* %23, i32 0, i32 0
  store i32 1, i32* %24, align 8
  %25 = load %struct.uniphier_aio_sub*, %struct.uniphier_aio_sub** %7, align 8
  %26 = call i32 @aio_init(%struct.uniphier_aio_sub* %25)
  store i32 %26, i32* %8, align 4
  %27 = load i32, i32* %8, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %2
  %30 = load i32, i32* %8, align 4
  store i32 %30, i32* %3, align 4
  br label %32

31:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %32

32:                                               ; preds = %31, %29
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local %struct.uniphier_aio* @uniphier_priv(%struct.snd_soc_dai*) #1

declare dso_local i32 @aio_init(%struct.uniphier_aio_sub*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
